# Michigan-Lottery-Analyzer

./: .gitignore  CHANGELOG.md  CHANGELOG_DEC04_2025.md  CHANGELOG_UPDATED.md  CUDA_INSTALLATION_GUIDE.md  CUDA_SETUP.md  Comprehensive_Integration_Report.txt  DOCUMENTATION_UPDATE_V2.2.md  DOC_UPDATE_NOV10.md  ENVIRONMENT_VARIABLES_REFERENCE.md  FANTASY_5_FIX_SUMMARY.md  FETCH_FUNCTION_FIX_REPORT.md  HISTORICAL_DATA_EXTRACTION_REPORT.md  JACKPOT_FEATURE_SUMMARY.md  JACKPOT_NUMBERS_FIXED.md  JAVASCRIPT_INTERFACE_COMPLETE.md  LEARNING_SYSTEM_SUMMARY.md  LOCAL_MIGRATION_SUMMARY.md  LOTTERY_DATA_SYSTEM_GUIDE.md  Lesson_04_Agent_Teams_with_CrewAI.code-workspace  Lottery results anylizer.docx  MICHIGAN_LOTTERY_INTEGRATION_COMPLETE.md  MICHIGAN_LOTTERY_WEB_INTEGRATION.md  MLA3.py  MLA4.py  MichiganLotteryAnalyzer.py  MichiganLotteryAnalyzer_fixed.py  Michigan_Lottery_Analyzer_Project_Update.doc  Michigan_Lottery_Analyzer_Project_Update.docx  OCR_POWERBALL_ANALYSIS.md  PROJECT_CAPABILITIES_ANALYSIS.md  PROJECT_SUMMARY.md  PROJECT_UPDATES_FOR_WORD_DOC.md  PYTHON_311_MIGRATION.md  PYTORCH_SETUP_NOTE.md  Please find the program at this link.doc  README.md  README_FINAL.md  README_UPDATED.md  RELEASE_NOTES_v3.1.0.md  (+99 more)
.streamlit/: config.toml
LotteryAIWorkbench/: .env.example  README.md  pyproject.toml  requirements.txt
LotteryAIWorkbench/app/: streamlit_app.py
LotteryAIWorkbench/docs/: API.md  ARCHITECTURE.md
LotteryAIWorkbench/scripts/: run_dev.ps1  seed_data.py
LotteryAIWorkbench/src/utils/: helpers.py
LotteryAIWorkbench/tests/: test_smoke.py
config/: .env.example
(+281 files in other folders)
